01.03.2011:
        - Added feature to show/hide track-types from arranger, this far only with toolbuttons
          and no persistent storage (rj)
28.02.2011:
        - Added progress dialog for loading projects (rj)
        - Aligned meters on mixer strip (rj)
27.02.2011:
        - Fixed piano roll controller graph text drawing (finally!). (Tim)
        - Fixed crashes in drag & drop for plugins and drag presets from outside muse into a plugin (rj)
        - Support for multiple drops of files to arranger, e.g easy import of a bunch of wave files (rj)
        - Added some missing Qt headers, found by Flo on Debian Lenny. (Tim)
26.02.2011:
        - Fixed some piano roll controller graph drawing issues. (Tim)
          Draw velocities on top of grid, but draw non-velocity items behind grid.
24.02.2011:
        - Improved default midi auto-connections. (Tim p4.0.17)
          Midi ports list default input routes column now shows 'all' by default.
          Improved and fixed default input and output routes columns.
          With those two columns' popup menus, users can now apply defaults to all existing tracks.
        - Fixed Organ synth crashing. Added setupUi(this) in OrganGui::OrganGui(). (Tim)
        - Fixed synth devices should not be listed as soloing chain popup items. (Tim)
18.02.2011:
        - Disable saveAs dialog for rec when project dialog isn't used (rj)
        - changed the default setting for move single rec with track, default is to NOT move (rj)
        - fixed (hopefully) bug in shortcut editor, global shortcuts were not always
          taken into account when checking if a shortcut was in use (rj)
        - added shortcut F for linedraw, applicable to automation drawing in arranger and pianoroll (rj)
15.02.2011:
        - Automation fixes, better detection, not perfect (rj)
14.02.2011:
        - Fixed midi track info panel layout and spacing. Should be much better now. (Tim)
        - Added patch to remove warnings from WillyFoobar (rj)